# ml_investing_wne

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirement_new.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: tests.yml
deepLOB/: deepLOB.py
my_dir/intro_to_kt/: oracle.json
my_dir/intro_to_kt/trial_0000/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0001/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0002/: checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0003/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0004/: checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0005/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0006/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
my_dir/intro_to_kt/trial_0007/: checkpoint.data-00000-of-00001  (+2 more)
my_dir/one_resnet_block/: oracle.json
my_dir/one_resnet_block_refreshed_dates/: oracle.json
src/: shap.py
src/ml_investing_wne/: PerformanceEvaluator.py  binance_data_processor.py  config.py  config_crypto.py  cumsum_filter.py  debugging.py  descriptive_statistics.py  experiment.py  experiment_factory.py  helper.py  keras_tuner_run.py  main-legacy.py  main.py  main_loop.py  main_loop_ensemble.py  main_loop_ensemble_boosting.py  main_test.py  mlflow.sh  models.py  performance_evaluator.py  run_crypto.py  run_performance_evaluator.py  run_rangebars.sh  run_sensitivity.sh  test2022.ipynb  train_test_val_split.py  transfer_learning.py  triple_barrier.py  utils.py  workbook.py
test/: test_data_engineering.py
(+465 files in other folders)
