[metadata]
name = ml_investing_wne
description = library to train ML models for investing
author = Przemyslaw Gradzki
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 1.0.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# packages =
#     ml_investing_wne
python_requires = >=3.7
package_dir =
    =src
packages=find:
zip_safe = no
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[pycodestyle]
max-line-length = 100

